# regamelite

./: CMakeLists.txt
regamedll/: CMakeLists.txt
regamedll/dlls/: qstring.h  saverestore.cpp
regamedll/dlls/bot/: cs_bot_chatter.cpp
regamedll/engine/: osconfig.h
regamedll/public/: strtools.h
regamedll/public/tier0/: platform.h
